# depslorer

./: .gitignore  README.org  cli.py  deps_explorer.py  pyproject.toml
examples/: example.toml
