[tool.poetry]
name = "unused-deps"
version = "0.1.0"
description = ""
authors = ["Nathan Furnal <nathanfurnal.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "unused_deps"}]

[tool.poetry.dependencies]
python = ">=3.10"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
types-pyyaml = "^6.0.12.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
